fix: set body width to 100vw to prevent scrollbar from pushing content

--- a/src/stylesheets/global.scss
+++ b/src/stylesheets/global.scss
@@ -10,6 +10,9 @@ html {
 }
 body {
   margin: 0;
+  overflow-x: hidden;
+  width: 100vw;
+  // margin-right: calc(-1 * (100vw - 100%));
 }
 html,
 button,
